compiler/testData/diagnostics/tests/deparenthesize/ParenthesizedVariable.kt
fun test() {
    (@d <!DECLARATION_IN_ILLEGAL_CONTEXT!>val bar = 2<!>)
}